引入RocketMQ实现用户订阅关注up动态

--- a/freedom-bilibili-api/src/main/resources/application-test.yml
+++ b/freedom-bilibili-api/src/main/resources/application-test.yml
@@ -4,3 +4,14 @@ spring:
     url: jdbc:mysql://localhost:3306/bilibili
     username: root
     password: root
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
+      password: 123456
+
+rocketmq:
+  name:
+    server:
+      address: 127.0.0.1:9876
+
