--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,19 @@
             <version>3.19.0</version>
         </dependency>
 
+        <!-- 引入RocketMQ客户端依赖 -->
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-client</artifactId>
+            <version>4.9.3</version>
+        </dependency>
+
+        <!-- 引入Spring Boot对Redis支持的依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
 
     </dependencies>
 
